Upgrade social-auth-core
Allow for social-auth-core to be greater than 4.2.0 in order to be compatible with Open edX Olive which uses 4.3.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-  "social-auth-core==4.2.0",
+  "social-auth-core>=4.2.0",
   "social-auth-app-django==5.0.0"
 ]
 keywords = ["Open edX", "oauth", "Wordpress"]
