synch pyproject.toml requirements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta:__legacy__"
 
 [project]
 name = "edx-oauth2-wordpress-backend"
-version = "1.0.6"
+version = "1.0.7"
 authors = [
   { name="Lawrence McDaniel", email="lpm0073@gmail.com" },
 ]
@@ -17,7 +17,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-  "social-auth-core>=4.2.0",
+  "social-auth-core==4.3.0",
   "social-auth-app-django==5.0.0"
 ]
 keywords = ["Open edX", "oauth", "Wordpress"]
