--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta:__legacy__"
 
 [project]
-name = "edx-oauth2-wordpress-backend"
+name = "edx-oauth2-nem"
 version = "1.0.8"
 authors = [
   { name="Lawrence McDaniel", email="lpm0073@gmail.com" },
 ]
-description = "An Open edX Python Social Auth backend for Wordpress"
+description = "An Open edX Python Social Auth backend for NemD"
 readme = "README.rst"
 requires-python = ">=3.7"
 classifiers = [
