Refactor Llave MX OAuth2 Integration
- Updated README to reflect the new OAuth2 + PKCE implementation for Llave MX.
- Removed deprecated NEM tests and references from TESTING.md.
- Revised llavemx_oauth.py to credit AprendeMX Team and updated the date.
- Deleted obsolete oauth2_nem package and its associated files.
- Updated release script for the new package name and versioning.
- Removed outdated test data files related to NEM OAuth.
- Cleaned up tests by removing legacy test cases and data.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,10 @@ stages:
 deploy_prod:
   stage: deploy
   script:
-    - sudo cp -r * $TUTOR_DIR/edx-oauth2-nem
+    - sudo cp -r * $TUTOR_DIR/edx-oauth2-llavemx
     - source $TUTOR_DIR/venv/bin/activate
     - cd $TUTOR_DIR
-    - sudo pip install -e ./edx-oauth2-nem
+    - sudo pip install -e ./edx-oauth2-llavemx
     - sudo tutor images build openedx
     - sudo tutor local start -d
   tags:
