--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,36 +1,38 @@
 [build-system]
-requires = ["setuptools", "wheel"]
-build-backend = "setuptools.build_meta:__legacy__"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
-name = "edx-oauth2-llavemx"
+name = "oauth2-llavemx"
 version = "2.0.0"
-authors = [
-  { name="AprendeMX Team", email="contacto@aprendemx.mx" },
-]
-description = "An Open edX Python Social Auth backend for Llave MX (Mexican Government Digital Identity) with OAuth2 + PKCE"
-readme = "README.rst"
-requires-python = ">=3.7"
+description = "LlaveMX OAuth2 backend for Open edX using python-social-auth."
+readme = "README.md"
+requires-python = ">=3.8"
+license = { file = "LICENSE" }
+authors = [{ name = "EMI / MéxicoX", email = "soporte@mexicox.gob.mx" }]
+keywords = ["open edx", "oauth", "oauth2", "llavemx", "mexico", "identity"]
 classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Framework :: Django",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-    "Framework :: Django",
-    "Intended Audience :: Developers",
+    "Programming Language :: Python :: 3.12",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 dependencies = [
   "social-auth-core>=4.3.0",
   "social-auth-app-django>=5.0.0"
 ]
-keywords = ["Open edX", "oauth", "oauth2", "pkce", "Llave MX", "Mexican Government", "digital identity"]
 
 [project.urls]
-"Homepage" = "https://github.com/aprendemx/Edx-Oauth2"
-"Bug Tracker" = "https://github.com/aprendemx/Edx-Oauth2/issues"
-"Llave MX" = "https://www.gob.mx/llavemx"
+Homepage = "https://github.com/aprendemx/Edx-Oauth2"
+Issues = "https://github.com/aprendemx/Edx-Oauth2/issues"
+
+[tool.hatch.build.targets.wheel]
+packages = ["oauth2_llavemx"]
